[package]
name = "tensorzero-auth"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hex = "0.4.3"

secrecy.workspace = true
serde.workspace = true
sha2 = "0.10.9"
sqlx = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
chrono.workspace = true
futures = { workspace = true }
axum = { workspace = true }
moka = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true, optional = true }

[lints]
workspace = true

[[test]]
name = "e2e"
path = "tests/e2e/tests.rs"
required-features = ["e2e_tests"]

[features]
e2e_tests = []
ts-bindings = ["dep:ts-rs"]
